--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 						<a href="#" class="hero-scene--logo">akad.</a>
 					</div>
 					<div class="col-2 offset-8 col-sm-2 offset-sm-9 col-md-1 offset-md-10 col-lg-1 offset-lg-10 col-xl-1 offset-xl-10">
-						<div class="dropdown show menu_icon_cont">
-						  <a class="btn btn-secondary dropdown-toggle menu_icon" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<div class="dropdown show menu_icon_cont dropdown-toggle" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						  <a class="btn btn-secondary menu_icon" href="#">
 						  </a>
 						  <div class="dropdown-menu dropdown-menu-icon" aria-labelledby="dropdownMenuLink">
 						    <a class="dropdown-item" href="#">Homepage</a>
