--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 	<header>
 		<div class="container-fluid header-banner">
 			<div class="container header-container">
-				<div class="row align-items-center hero-scene--first-row">
-				<!-- <div class="row align-items-start justify-content-between hero-scene--first-row"> -->
+				<div class="row align-items-center hero-scene-first-row">
 					<div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
 						<a href="#" class="hero-scene--logo">akad.</a>
 					</div>
@@ -106,28 +105,36 @@
 			<div class="row container__content--link">
 				<div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
 					<a href="#">
-						<h3><i class="icon ion-ios-pulse"></i></h3>
+						<div class="icon-title">
+							<i class="icon ion-ios-pulse"></i>
+						</div>
 						<h4>KEEP PULSE GOING</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
 					</a>
 				</div>
 				<div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
 					<a href="#">
-						<h3><i class="icon ion-ios-infinite-outline"></i></h3>
+						<div class="icon-title">
+							<i class="icon ion-ios-infinite-outline"></i>
+						</div>
 						<h4>PASS THE LIMITS</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
 					</a>
 				</div>
 				<div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
 					<a href="#">
-						<h3><i class="icon ion-ios-lightbulb-outline"></i></h3>
+						<div class="icon-title">
+							<i class="icon ion-ios-lightbulb-outline"></i>
+						</div>
 						<h4>GREAT IDEAS</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
 					</a>
 				</div>
 				<div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
 					<a href="#">
-						<h3><i class="icon ion-ios-settings"></i></h3>
+						<div class="icon-title">
+							<i class="icon ion-ios-settings"></i>
+						</div>
 						<h4>AWESOME SUPPORT</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
 					</a>
