--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				</div>
 				<div class="row align-items-center justify-content-center header-banner--content">
 					<h1>our services</h1>
-					<nav aria-label="breadcrumb" role="navigation">
+					<nav aria-label="breadcrumb">
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="#">Home</a></li>
 							<li class="breadcrumb-item active" aria-current="page">services</li>
